--- a/assets/Pages/skills.html
+++ b/assets/Pages/skills.html
@@ -3,35 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills | Bruno Rhis</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Skills - Bruno Rhis</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">[ Portfolio ]</div>
-        <nav>
-            <ul>
-                <li><a href="../main.html">Home</a></li>
-                <li><a href="whoami.html">Whoami</a></li>
-                <li><a href="skills.html" class="active">Skills</a></li>
-                <li><a href="artigos.html">Artigos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="home">
-        <div class="about-content">
-            <h3>Minhas Habilidades</h3>
-            <ul>
-                <li>🔹 Testes de Penetração e Segurança Ofensiva</li>
-                <li>🔹 Programação (Python, JavaScript, Bash, PowerShell)</li>
-                <li>🔹 Desenvolvimento Web Seguro</li>
-                <li>🔹 Análise de Vulnerabilidades</li>
-                <li>🔹 Gestão de Incidentes e Resposta a Ameaças</li>
-                <li>🔹 OSINT e Engenharia Social</li>
-            </ul>
-        </div>
-    </section>
+<header>
+    <div class="logo">[ Skills ]</div>
+    <nav>
+        <ul>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="whoami.html">Whoami</a></li>
+            <li><a href="skills.html" class="active">Skills</a></li>
+            <li><a href="artigos.html">Artigos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero">
+    <div class="hero-text">
+        <h1>Minhas Skills</h1>
+        <ul>
+            <li>🔹 **Pentest e Exploração de Vulnerabilidades**</li>
+            <li>🔹 **Desenvolvimento de Exploits e Automação**</li>
+            <li>🔹 **Segurança ofensiva e defensiva**</li>
+            <li>🔹 **Hardening de sistemas e servidores**</li>
+            <li>🔹 **Engenharia reversa e análise forense**</li>
+        </ul>
+    </div>
+</section>
+
 </body>
 </html>
