--- a/assets/Pages/contato.html
+++ b/assets/Pages/contato.html
@@ -3,34 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato | Bruno Rhis</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Artigos - Bruno Rhis</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">[ Portfolio ]</div>
-        <nav>
-            <ul>
-                <li><a href="../main.html">Home</a></li>
-                <li><a href="whoami.html">Whoami</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="artigos.html">Artigos</a></li>
-                <li><a href="contato.html" class="active">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="home">
-        <div class="about-content">
-            <h3>Entre em Contato</h3>
-            <p>Para dúvidas, parcerias ou oportunidades, entre em contato comigo pelos seguintes meios:</p>
-            <ul>
-                <li>📧 Email: <a href="mailto:contato@brunorhis.com">contato@brunorhis.com</a></li>
-                <li>💼 LinkedIn: <a href="https://www.linkedin.com/in/brunorhis/" target="_blank">/brunorhis</a></li>
-                <li>🐙 GitHub: <a href="https://github.com/brunorhis" target="_blank">/brunorhis</a></li>
-                <li>💬 Discord: <a href="https://discord.gg/gfYw7kfMDU" target="_blank">Servidor</a></li>
-            </ul>
-        </div>
-    </section>
+<header>
+    <div class="logo">[ Artigos ]</div>
+    <nav>
+        <ul>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="whoami.html">Whoami</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="artigos.html" class="active">Artigos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero">
+    <div class="hero-text">
+        <h1>Meus Artigos</h1>
+        <p>Aqui você encontra artigos sobre segurança cibernética, testes de invasão, automação de exploits e muito mais.</p>
+        <ul>
+            <li>📌 <a href="#">Desenvolvendo exploits do zero</a></li>
+            <li>📌 <a href="#">Engenharia reversa aplicada à segurança</a></li>
+            <li>📌 <a href="#">Melhores práticas para proteger seus sistemas</a></li>
+            <li>📌 <a href="#">Criação de scripts para automação de pentests</a></li>
+        </ul>
+    </div>
+</section>
+
 </body>
 </html>
