--- a/assets/Pages/contato.html
+++ b/assets/Pages/contato.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artigos - Bruno Rhis</title>
+    <title>Contato - Bruno Rhis</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
 
 <header>
-    <div class="logo">[ Artigos ]</div>
+    <div class="logo">[ Contato ]</div>
     <nav>
         <ul>
             <li><a href="../../index.html">Home</a></li>
             <li><a href="whoami.html">Whoami</a></li>
             <li><a href="skills.html">Skills</a></li>
-            <li><a href="artigos.html" class="active">Artigos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="artigos.html">Artigos</a></li>
+            <li><a href="contato.html" class="active">Contato</a></li>
         </ul>
     </nav>
 </header>
 
 <section class="hero">
     <div class="hero-text">
-        <h1>Meus Artigos</h1>
-        <p>Aqui você encontra artigos sobre segurança cibernética, testes de invasão, automação de exploits e muito mais.</p>
-        <ul>
-            <li>📌 <a href="#">Desenvolvendo exploits do zero</a></li>
-            <li>📌 <a href="#">Engenharia reversa aplicada à segurança</a></li>
-            <li>📌 <a href="#">Melhores práticas para proteger seus sistemas</a></li>
-            <li>📌 <a href="#">Criação de scripts para automação de pentests</a></li>
-        </ul>
+        <h1>Entre em Contato</h1>
+        <p>📩 **E-mail:** contato@brunorhis.com</p>
+        <p>🔗 **GitHub:** <a href="https://github.com/brunorhis" target="_blank">github.com/brunorhis</a></p>
+        <p>🔗 **LinkedIn:** <a href="https://www.linkedin.com/in/brunorhis/" target="_blank">linkedin.com/in/brunorhis</a></p>
+        <p>💬 **Discord:** <a href="https://discord.gg/gfYw7kfMDU" target="_blank">Entre no meu servidor</a></p>
     </div>
 </section>
 
