--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -3,34 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artigos | Bruno Rhis</title>
-    <link rel="stylesheet" href="../style.css">
+    <title>Artigos - Bruno Rhis</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">[ Portfolio ]</div>
-        <nav>
-            <ul>
-                <li><a href="../main.html">Home</a></li>
-                <li><a href="whoami.html">Whoami</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="artigos.html" class="active">Artigos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <section class="home">
-        <div class="about-content">
-            <h3>Meus Artigos</h3>
-            <p>Aqui você encontrará artigos sobre cibersegurança, pentest e desenvolvimento seguro.</p>
-            <ul>
-                <li><a href="#">🔹 SQL Injection: Como Explorar e Prevenir</a></li>
-                <li><a href="#">🔹 Introdução ao OSINT: Inteligência de Código Aberto</a></li>
-                <li><a href="#">🔹 Hardening de Servidores: Melhorando a Segurança</a></li>
-                <li><a href="#">🔹 Engenharia Social: Manipulação e Prevenção</a></li>
-            </ul>
-        </div>
-    </section>
+<header>
+    <div class="logo">[ Artigos ]</div>
+    <nav>
+        <ul>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="whoami.html">Whoami</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="artigos.html" class="active">Artigos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero">
+    <div class="hero-text">
+        <h1>Meus Artigos</h1>
+        <p>Aqui você encontra artigos sobre segurança cibernética, testes de invasão, automação de exploits e muito mais.</p>
+        <ul>
+            <li>📌 <a href="#">Desenvolvendo exploits do zero</a></li>
+            <li>📌 <a href="#">Engenharia reversa aplicada à segurança</a></li>
+            <li>📌 <a href="#">Melhores práticas para proteger seus sistemas</a></li>
+            <li>📌 <a href="#">Criação de scripts para automação de pentests</a></li>
+        </ul>
+    </div>
+</section>
+
 </body>
 </html>
