--- a/wlist2.html
+++ b/wlist2.html
@@ -77,7 +77,7 @@
     <textarea id="output" readonly></textarea>
     <button type="button" id="downloadBtn" class="btn btn-custom mt-3">Baixar Wordlist</button>
 
-    <div class="footer">© 2025 - Gerador de Wordlist Inteligente | Criado com S2 por Bruno</div>
+    <div class="footer">© 2025 - Gerador de Wordlist Inteligente | Criado com S2 por Burú</div>
 </div>
 
 <script>
