--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whoami - Bruno Rhis</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/pages.css">
 </head>
 <body>
 
@@ -24,8 +24,8 @@
 <section class="hero">
     <div class="hero-text">
         <h1>Quem sou eu?</h1>
-        <p>Me chamo **Bruno Rhis**, sou **Consultor de TI, Pentester e Programador** apaixonado por segurança cibernética. Minha missão é explorar vulnerabilidades, proteger sistemas e compartilhar conhecimento.</p>
-        <p>Com anos de experiência na área, desenvolvo **soluções de segurança** para empresas, realizo **testes de invasão** e contribuo para a **comunidade hacker ética**.</p>
+        <p>Me chamo **Bruno Rhis**, sou **Consultor de TI, Pentester e Programador** apaixonado por segurança cibernética.</p>
+        <p>Minha missão é explorar vulnerabilidades, proteger sistemas e compartilhar conhecimento.</p>
     </div>
 </section>
 
