--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -1,33 +1,133 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whoami - Bruno Rhis</title>
-    <link rel="stylesheet" href="../CSS/pages.css">
+  <meta charset="UTF-8">
+  <meta name="description" content="Quem sou eu - Bruno Rhis">
+  <meta name="keywords" content="Bruno Rhis, Quem sou eu, Portfólio">
+  <meta name="author" content="Bruno Rhis">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | Whoami - Bruno Rhis</title>
+  <link rel="icon" href="../IMAGES/sailogo.png" type="image/png">
+  <!-- Importando a fonte Orbitron -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Importando Boxicons -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+  <style>
+    /* Reset e configurações básicas */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background-color: #000;
+      color: #e0e0e0;
+      font-family: 'Orbitron', sans-serif;
+      line-height: 1.6;
+    }
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+    /* Header */
+    header {
+      padding: 20px;
+      border-bottom: 2px solid #39ff14;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #39ff14;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+    }
+    nav ul li a {
+      font-size: 1rem;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover,
+    nav ul li a.active {
+      color: #39ff14;
+    }
+    /* Seção de Conteúdo */
+    .hero {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      min-height: 80vh;
+      padding: 20px;
+    }
+    .hero-text {
+      flex: 1 1 300px;
+      padding: 20px;
+    }
+    .hero-text h1 {
+      font-size: 3.5rem;
+      color: #39ff14;
+      margin-bottom: 10px;
+    }
+    .hero-text p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+    .hero-img {
+      flex: 1 1 300px;
+      text-align: center;
+      padding: 20px;
+    }
+    .hero-img img {
+      max-width: 300px;
+      border-radius: 50%;
+      border: 4px solid #39ff14;
+      box-shadow: 0 0 15px #39ff14;
+    }
+    /* Responsividade */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+      nav ul {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+      }
+      .hero {
+        flex-direction: column;
+      }
+    }
+  </style>
 </head>
 <body>
-
-<header>
-    <div class="logo">[ Whoami ]</div>
+  <header>
+    <div class="logo">[ Portfolio ]</div>
     <nav>
-        <ul>
-            <li><a href="../../index.html">Home</a></li>
-            <li><a href="whoami.html" class="active">Whoami</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="artigos.html">Artigos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+      <ul>
+        <li><a href="../../main.html">Home</a></li>
+        <li><a href="whoami.html" class="active">Whoami</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="artigos.html">Artigos</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
     </nav>
-</header>
-
-<section class="hero">
+  </header>
+  <section class="hero">
     <div class="hero-text">
-        <h1>Quem sou eu?</h1>
-        <p>Me chamo **Bruno Rhis**, sou **Consultor de TI, Pentester e Programador** apaixonado por segurança cibernética.</p>
-        <p>Minha missão é explorar vulnerabilidades, proteger sistemas e compartilhar conhecimento.</p>
+      <h1>Quem sou eu?</h1>
+      <p>
+        Olá! Eu sou Bruno Rhis, um apaixonado por tecnologia, com experiência em consultoria de TI, pentest e programação. Minha jornada me leva a explorar constantemente os desafios da cibersegurança e a me aprofundar no universo da ética hacker.
+      </p>
     </div>
-</section>
-
+    <div class="hero-img">
+      <img src="../IMAGES/mage.png" alt="Imagem de Bruno Rhis">
+    </div>
+  </section>
 </body>
 </html>
