--- a/assets/Pages/artigos.html
+++ b/assets/Pages/artigos.html
@@ -100,7 +100,7 @@
     <div class="logo">[ Portfolio ]</div>
     <nav>
       <ul>
-        <li><a href="../../index.html">Home</a></li>
+        <li><a href="../../main.html">Home</a></li>
         <li><a href="whoami.html">Whoami</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="artigos.html" class="active">Artigos</a></li>
