--- a/assets/Pages/skills.html
+++ b/assets/Pages/skills.html
@@ -105,7 +105,7 @@
     <div class="logo">[ Portfolio ]</div>
     <nav>
       <ul>
-        <li><a href="../../main.html">Home</a></li>
+        <li><a href="../../index.html">Home</a></li>
         <li><a href="whoami.html">Whoami</a></li>
         <li><a href="skills.html" class="active">Skills</a></li>
         <li><a href="artigos.html">Artigos</a></li>
