--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -110,7 +110,7 @@
     <div class="logo">[ Portfolio ]</div>
     <nav>
       <ul>
-        <li><a href="../../main.html">Home</a></li>
+        <li><a href="../../index.html">Home</a></li>
         <li><a href="whoami.html" class="active">Whoami</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="artigos.html">Artigos</a></li>
