--- a/assets/Pages/whoami.html
+++ b/assets/Pages/whoami.html
@@ -110,7 +110,7 @@
     <div class="logo">[ Portfolio ]</div>
     <nav>
       <ul>
-        <li><a href="../../index.html">Home</a></li>
+        <li><a href="../../main.html">Home</a></li>
         <li><a href="whoami.html" class="active">Whoami</a></li>
         <li><a href="skills.html">Skills</a></li>
         <li><a href="artigos.html">Artigos</a></li>
@@ -121,9 +121,7 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Quem sou eu?</h1>
-      <p>
-        Olá! Eu sou Bruno Rhis, um apaixonado por tecnologia, com experiência em consultoria de TI, pentest e programação. Minha jornada me leva a explorar constantemente os desafios da cibersegurança e a me aprofundar no universo da ética hacker.
-      </p>
+      <p></p>
     </div>
   </section>
 </body>
