--- a/main.html
+++ b/main.html
@@ -163,12 +163,11 @@
     // Inicializa o Typed.js para o efeito de digitação
     new Typed(".pro-text", {
       strings: [
-        "Consultor de TI",
+        "Threat Intelligence Analyst",
         "Pentester",
-        "Programador",
+        "Red Team Operator",
         "Hacker Ético",
-        "Estudante",
-        "Entusiasta"
+        "Eterno Estudante",
       ],
       typeSpeed: 100,
       backSpeed: 100,
