--- a/wlist2.html
+++ b/wlist2.html
@@ -68,7 +68,7 @@
 
         <div class="mb-3">
             <label class="form-label">Quantidade de Senhas:</label>
-            <input type="number" id="passwordQuantity" class="form-control text-center" min="10" max="500" value="50">
+            <input type="number" id="passwordQuantity" class="form-control text-center" min="10" max="1000" value="50">
         </div>
 
         <button type="button" id="generateWordlistBtn" class="btn btn-custom mt-3">Gerar Wordlist</button>
@@ -77,7 +77,7 @@
     <textarea id="output" readonly></textarea>
     <button type="button" id="downloadBtn" class="btn btn-custom mt-3">Baixar Wordlist</button>
 
-    <div class="footer">© 2025 - Gerador de Wordlist Inteligente | Criado com S2 por Burú</div>
+    <div class="footer">© 2025 - Gerador de Wordlist Inteligente | Criado com 💀 por Burú</div>
 </div>
 
 <script>
@@ -96,11 +96,10 @@ document.getElementById('generateWordlistBtn').onclick = function () {
 
     let years = [];
     for (let y = startYear; y <= currentYear; y++) {
-        years.push(y.toString());
+        years.unshift(y.toString());
     }
 
-    let commonPatterns = ["123", "1234", "2024", "!@", "#", "$", "!", "password"];
-    let specialChars = ["@", "#", "$", "!", "*", "&"];
+    let specialChars = ["@", "!", "#", "$", "*"];
     let substitutions = {
         "a": "@",
         "s": "$",
@@ -110,54 +109,72 @@ document.getElementById('generateWordlistBtn').onclick = function () {
         "g": "9"
     };
 
+    function capitalize(word) {
+        return word.charAt(0).toUpperCase() + word.slice(1).toLowerCase();
+    }
+
     function applySubstitutions(word) {
-        let variations = [word, word.toLowerCase(), word.toUpperCase()];
-        let transformed = word.split("").map(char => substitutions[char] || char).join("");
-        variations.push(transformed);
-        return variations;
+        let transformed = word.toLowerCase().split("").map(char => substitutions[char] || char).join("");
+        return [capitalize(word), word.toLowerCase(), word.toUpperCase(), transformed];
     }
 
-    function generateVariations(word) {
-        let variations = applySubstitutions(word);
-        let generated = [];
-
-        variations.forEach(variation => {
-            commonPatterns.forEach(pattern => generated.push(variation + pattern));
-            years.forEach(year => generated.push(variation + year));
-            specialChars.forEach(char => generated.push(variation + char));
-        });
-
-        return generated;
+    function generatePriorityCombos(baseWords) {
+        let output = [];
+        for (let base of baseWords) {
+            let variations = applySubstitutions(base);
+            for (let variant of variations) {
+                for (let year of years) {
+                    for (let sym of specialChars) {
+                        output.push(`${variant}${sym}${year}`);
+                        output.push(`${variant}${year}${sym}`);
+                    }
+                }
+            }
+        }
+        return output;
     }
 
-    if (company) {
-        wordlist.push(...generateVariations(company));
+    function generateExtendedMutations(baseWords) {
+        let output = [];
+        for (let base of baseWords) {
+            let variations = applySubstitutions(base);
+            for (let variant of variations) {
+                specialChars.forEach(sym => output.push(variant + sym));
+                years.forEach(year => output.push(variant + year));
+                output.push(variant + "123");
+                output.push(variant + "01");
+                output.push(variant + "123!");
+            }
+        }
+        return output;
     }
 
-    if (employee) {
-        wordlist.push(...generateVariations(employee));
-    }
-
+    let baseWords = [];
+    if (company) baseWords.push(company);
+    if (employee) baseWords.push(employee);
     if (company && employee) {
-        let combinedWords = [
-            company + employee,
-            employee + company,
-            company + "." + employee,
-            employee + "." + company,
-            employee + "@" + company,
-            company + "@" + employee
-        ];
-
-        combinedWords.forEach(combination => {
-            wordlist.push(...applySubstitutions(combination));
-            commonPatterns.forEach(pattern => wordlist.push(combination + pattern));
-            years.forEach(year => wordlist.push(combination + year));
-        });
+        baseWords.push(company + employee);
+        baseWords.push(employee + company);
+        baseWords.push(employee + "@" + company);
+        baseWords.push(company + "@" + employee);
+        baseWords.push(company + "." + employee);
+        baseWords.push(employee + "." + company);
+        baseWords.push(employee + "_" + company);
+        baseWords.push(company + "_" + employee);
     }
 
-    // Limita a quantidade de senhas geradas conforme a escolha do usuário
-    wordlist = [...new Set(wordlist)].slice(0, passwordQuantity);
-    document.getElementById("output").value = wordlist.join("\n");
+    let strongList = generatePriorityCombos(baseWords);
+    let fallbackList = generateExtendedMutations(baseWords);
+
+    let finalList = [...new Set([...strongList, ...fallbackList])];
+
+    while (finalList.length < passwordQuantity) {
+        let filler = capitalize(employee || company || "Senha") + Math.floor(Math.random() * 9999) + specialChars[Math.floor(Math.random() * specialChars.length)];
+        finalList.push(filler);
+        finalList = [...new Set(finalList)];
+    }
+
+    document.getElementById("output").value = finalList.slice(0, passwordQuantity).join("\n");
 };
 
 document.getElementById('downloadBtn').onclick = function () {
@@ -166,7 +183,7 @@ document.getElementById('downloadBtn').onclick = function () {
         alert("Nenhuma wordlist gerada para baixar!");
         return;
     }
-    
+
     let blob = new Blob([text], { type: "text/plain" });
     let link = document.createElement("a");
     link.href = URL.createObjectURL(blob);
